Added file changes monitor handler (daemon), improved file handler, improved logger, finished nightly data backup, finished nightly modified-only data upload

--- a/var/intranet/html/index.html
+++ b/var/intranet/html/index.html
@@ -10,9 +10,9 @@
 				<th>Products</th>
 			</tr>
 			<tr>
-				<td>Note 8</td>
-				<td>Iphone X</td>
-				<td>Galxy S9</td>
+				<td>Water</td>
+				<td>Pepsi</td>
+				<td>Apple Mouse</td>
 			</tr>
 
 		<table>
