--- a/var/intranet/html/index.html
+++ b/var/intranet/html/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Shop Example</title>
+		<title>A super-super shop</title>
 	</head>
 
 	<body>
@@ -12,7 +12,7 @@
 			<tr>
 				<td>Water</td>
 				<td>Pepsi</td>
-				<td>Apple Mouse</td>
+				<td>Apple Mouse & keyboard</td>
 			</tr>
 
 		<table>
